--- a/2023.06.20 React/mini blog/react-website/src/Post/Post.css
+++ b/2023.06.20 React/mini blog/react-website/src/Post/Post.css
@@ -1,6 +1,10 @@
-
-
-p, h1, textarea, input, body {margin: 0;}
+p,
+h1,
+textarea,
+input,
+body {
+    margin: 0;
+}
 
 
 .container_bg {
@@ -8,6 +12,7 @@ p, h1, textarea, input, body {margin: 0;}
     flex-direction: column;
     justify-content: center;
 }
+
 .container {
     padding: 10px;
     background-color: var(--main);
@@ -16,7 +21,7 @@ p, h1, textarea, input, body {margin: 0;}
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius);
-    height:fit-content;
+    height: fit-content;
     width: 70%;
     align-self: center;
     transition: all var(--transition-duration);
@@ -42,9 +47,11 @@ p, h1, textarea, input, body {margin: 0;}
     padding: 10px;
     border-radius: var(--border-radius);
     transition: all var(--transition-duration);
-    
+
 }
-.heading h1, .heading input {
+
+.heading h1,
+.heading input {
     background-color: transparent;
     text-align: center;
     color: var(--main);
@@ -53,18 +60,24 @@ p, h1, textarea, input, body {margin: 0;}
     font-weight: 600;
     padding: 0px;
 }
+
 .heading p {
     font-size: --font-size-text;
     letter-spacing: 1px;
 }
 
 
-.container p:hover, .container input:hover, .container textarea:hover,  .container label:hover {
-    
+.container p:hover,
+.container input:hover,
+.container textarea:hover,
+.container label:hover {
+
     color: var(--accent);
     transition: all var(--transition-duration);
-} 
-textarea, input {
+}
+
+textarea,
+input {
     border: none;
     white-space: pre-line;
     background-color: var(--main);
@@ -72,9 +85,10 @@ textarea, input {
     font-family: var(--font-family);
     font-size: var(--font-size-text);
     overflow: hidden;
-    resize:vertical;
+    resize: vertical;
     height: fit-content;
 }
+
 #text {
     outline: 2px solid var(--accent);
     border-radius: var(--border-radius);
@@ -95,7 +109,10 @@ textarea, input {
     display: flex;
     flex-direction: column;
 }
-.article p, .article textarea, .article input {
+
+.article p,
+.article textarea,
+.article input {
     margin-top: 10px;
     margin-left: 10px;
 }
@@ -108,6 +125,7 @@ textarea, input {
     padding: 0 10px 0 10px;
     border-radius: var(--border-radius);
 }
+
 #note {
     opacity: 0.5;
 }
@@ -125,5 +143,3 @@ textarea, input {
 
     border-radius: var(--border-radius);
 }
-   
-
