--- a/2023.06.20 React/redux/shop/src/Shop/Shop.css
+++ b/2023.06.20 React/redux/shop/src/Shop/Shop.css
@@ -6,20 +6,35 @@
     height: 100%;   
 }
 
-@media only screen and (max-width: 600px) {
+
+
+@media only screen and (min-width: 200px) {
     .shop-product-grid {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns:  1fr;
         grid-auto-rows: 200px;
-        
     }
 }
-
-.shop-product-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 200px;
-    
+@media only screen and (min-width: 600px) {
+    .shop-product-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 200px;
+    }
+}
+@media only screen and (min-width: 800px) {
+    .shop-product-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 200px;
+    }
+}
+@media only screen and (min-width: 1100px) {
+    .shop-product-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: 200px;
+    }
 }
 
 .shop-product {
@@ -31,13 +46,34 @@
     color: var(--text-color);    
     background-color: var(--second-text);
     transition: all .2s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.shop-product h3 {
+    text-align: center;
+    background-color: var(--second-bg);
+    color: var(--second-text);
+    border-radius: 90px;
+}
+.shop-product h3:hover {
+    background-color: rgb(159, 197, 159);
+    color: var(--second-bg);
+}
+
+
 .shop-product:hover {
-    color: var(--second-text);    
-    background-color: var(--text-color);
-    transition: all .2s;
+    transform: scale(1.1);
+    border:  2px solid var(--second-bg);
+    margin: -2px;
+    transition: all .1s;
 }
 
 .shop-product p {
+    text-align: left;
+}
+
+.shop-product h2 {
     text-align: center;
 }
